Implement task 6 - change the directory structure, start working on swag reworking
