# orders_service/docs/swagger.json
@@ -12,9 +12,6 @@
         "/create-order": {
             "post": {
                 "description": "allows to buy a book and return the information about it",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -22,29 +19,25 @@
                 "operationId": "create-order",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "Book uuid",
                         "name": "book_uuid",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
+                        "in": "formData",
+                        "required": true
                     },
                     {
+                        "type": "string",
                         "description": "Author name",
                         "name": "description",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/main.Order"
                         }
                     }
                 }
@@ -74,9 +67,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/main.Order"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "main.Order": {
+            "type": "object",
+            "properties": {
+                "book_uuid": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "uuid": {
+                    "type": "integer"
                 }
             }
         }
